# Agate

./: .clang-format  .gitignore  .gitmodules  Agate.sln  Agate.vcxproj  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  premake5.lua
.github/workflows/: Static_Analysis.yml  basic-build.yml  clang-tidy-review.yml  cmake-multi-platform.yml  codeql.yml  main.yml  weekly-multi-platform-build.yml
Agate/: Agate.vcxproj  Agate.vcxproj.filters  CMakeLists.txt
Agate/src/: Agate.h  agpch.cpp  agpch.h  test.cpp  test.h
Agate/src/Agate/: Core.h  EntryPoint.cpp  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Main.h  test.cpp  test.h
Agate/src/Agate/Core/: Core.h  EntryPoint.cpp  EntryPoint.h  InputPulling.cpp  InputPulling.h  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Main.h  keyCodes.h
Agate/src/Agate/Events/: ApplicationEvents.h  Event.cpp  Event.h  KeyEvents.h  MouseEvent.h
Agate/src/Agate/GameObjects/: Cube.cpp  Cube.h  GameObject.h  GameObjectsUI.cpp  GameObjectsUI.h  Light.cpp  Light.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
Agate/src/Agate/GameObjects/GameObjectUI/: GameObjectsUI.cpp  GameObjectsUI.h
Agate/src/Agate/ImGui-layer/: Example_imguiLayer.cpp  Example_imguiLayer.h  build.cpp  imguiLayer.cpp  imguiLayer.h  imgui_interface.cpp  imgui_interface.h
Agate/src/Agate/Math/: Execptions.h  Mat3D.h  Math.h  Vect2D.h  Vect3D.h
Agate/src/Agate/RenderContext/: Context.cpp  Context.h  CurrentContext.cpp  CurrentContext.h
Agate/src/Agate/Rendering/: Camera.cpp  Camera.h  ModelLoader.cpp  ModelLoader.h  Shader.cpp  Shader.h  modelLoader.cpp  modelLoader.h  temp_test_layer.h
Agate/src/Agate/Rendering/OpenGl/: BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  OpenGLCheck.h  Render.cpp  Render.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.h
Agate/src/Agate/Rendering/Shaders/: Basic.fg.glsl  Basic.fg.shader  Basic.vs.glsl  Basic.vs.shader  model_loading.fg.glsl  model_loading_lighting.fg.glsl  model_loading_lighting.vs.glsl
Agate/src/Agate/Rendering/Shaders/lighting/: 1.colors.vs.shader  colors_lighting.fg.glsl  colors_lighting.vs.glsl  lighting_cube.fg.glsl
Agate/src/Agate/Window/: Window.cpp  Window.h
Agate/src/Agate/imgui-layer/: imguiLayer.cpp  imguiLayer.h
Agate/src/Agate/renderContext/: Context.h
Agate/src/Agate/window/: Create_Window.cpp  Create_Window.h  Window.cpp  Window.h
Agate/src/Events/: Event.cpp  Event.h  MouseEvent.h
Agate/src/Math/: Vectors.h
Agate/vender/glad/include/glad/: glad.h
Agate/vender/glad/src/: glad.c
Agate/vender/imgui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  imgui.cpp  imgui.h  imgui.sln  imgui.vcxproj  imgui.vcxproj.filters  imgui_tables.cpp
Agate/vender/imgui/backends/: imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_impl_vulkan.cpp  imgui_impl_wgpu.cpp
Agate/vender/imgui/docs/: CHANGELOG.txt  FAQ.md  README.md  TODO.txt
Agate/vender/imgui/examples/example_glfw_opengl2/: main.cpp
Agate/vender/imgui/examples/libs/glfw/include/GLFW/: glfw3.h
Agate/vender/imgui/misc/freetype/: README.md  imgui_freetype.cpp
Application/: Application.vcxproj  CMakeLists.txt
Application/src/: Application.cpp
bin-int/Release-x64/Agate/: Agate.dll.recipe
bin-int/Release-x64/Agate/Agate.tlog/: Agate.lastbuildstate  Agate.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Release-x64/Application/: Application.exe.recipe
bin-int/Release-x64/Application/Application.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
